# jupyter_anywidget_kuzu

./: .gitignore  BUILD.md  README.md  example.ipynb  package-lock.json  package.json  pyproject.toml
js/: kuzu.css  kuzu.html  kuzu.js  widget.css  widget.js
src/jupyter_anywidget_kuzu/: __init__.py
